--- a/Provider.Application/Provider.Application.csproj
+++ b/Provider.Application/Provider.Application.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Provider.Domain\Provider.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
