--- a/Provider.Web/appsettings.json
+++ b/Provider.Web/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "ProviderConnectionString": "Server=localhost\\SQLEXPRESS;Database=Provider;User Id=sa;Password=sa;MultipleActiveResultSets=true"
+  },
   "AllowedHosts": "*"
 }
