--- a/Provider.Web/Provider.Web.csproj
+++ b/Provider.Web/Provider.Web.csproj
@@ -5,7 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.6">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Provider.Application\Provider.Application.csproj" />
+    <ProjectReference Include="..\Provider.Infra\Provider.Infra.csproj" />
   </ItemGroup>
 
 </Project>
