udanca de banco de dados

--- a/Provider.Web/appsettings.json
+++ b/Provider.Web/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "ProviderConnectionString": "Server=localhost\\SQLEXPRESS;Database=Provider;User Id=sa;Password=sa;MultipleActiveResultSets=true"
+    "ProviderConnectionString": "User ID=postgres;Password=postgres;Server=localhost;Port=5432;Database=Provider"
   },
   "AllowedHosts": "*"
 }
